--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,3 +11,4 @@
 @import url('./trailer.modal.css');
 @import url('./mobile-nav.css');
 @import url('./movie-card.css');
+@import url('./login.css');
