--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
   <div class="container header-container">
     <a href="./index.html" class="logo">
-      <img src="./img/_2.png" alt="Cinemania Logo" />
-      <span>Cinemania</span>
+      <img src="./img/logo.png" alt="Cinemania Logo" />
+      <span>cprookie</span>
     </a>
     <nav class="main-nav">
       <button class="mobile-nav-close">&times;</button>
@@ -12,6 +12,10 @@
         <li><a href="./my-library.html" class="nav-link">MY LIBRARY</a></li>
       </ul>
     </nav>
+    <div class="auth-buttons">
+  <button id="btn-login" class="nav-link">Login / Register</button>
+  <button id="btn-logout" class="nav-link is-hidden">Logout</button>
+  <span id="user-email" class="user-info"></span> </div>
 
     <div class="theme-switcher">
       <label class="switch">
