--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -87,13 +87,7 @@
       </label>
     </div>
 
-    <button class="mobile-menu-btn" style="
-        background: none;
-        border: none;
-        color: #fff;
-        font-size: 24px;
-        display: none;
-      ">
+    <button class="mobile-menu-btn">
       <i class="fas fa-bars"></i>
     </button>
   </div>
