--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,13 +44,202 @@
               <i class="fas fa-chevron-right arrow-icon"></i>
             </button>
 
-            <div id="languages-list" class="submenu-content">
-              <a href="#" class="dropdown-item lang-opt" data-val="ku">Kurdish</a>
-              <a href="#" class="dropdown-item lang-opt" data-val="tr">Turkish</a>
-              <a href="#" class="dropdown-item lang-opt" data-val="fr">Français</a>
-              <a href="#" class="dropdown-item lang-opt" data-val="de">Deutsch</a>
-              <a href="#" class="dropdown-item lang-opt" data-val="en">English</a>
-            </div>
+        <div id="languages-list" class="submenu-content">
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ku">
+    <img class="flag-icon" src="./img/kurdistan.svg"> Kurdish
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="tr">
+    <img class="flag-icon" src="https://flagcdn.com/w20/tr.png"> Turkish
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="fr">
+    <img class="flag-icon" src="https://flagcdn.com/w20/fr.png"> Français
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="de">
+    <img class="flag-icon" src="https://flagcdn.com/w20/de.png"> Deutsch
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="en">
+    <img class="flag-icon" src="https://flagcdn.com/w20/gb.png"> English
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="es">
+    <img class="flag-icon" src="https://flagcdn.com/w20/es.png"> Español
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="it">
+    <img class="flag-icon" src="https://flagcdn.com/w20/it.png"> Italiano
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="pt">
+    <img class="flag-icon" src="https://flagcdn.com/w20/pt.png"> Português
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ru">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ru.png"> Русский
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ar">
+    <img class="flag-icon" src="https://flagcdn.com/w20/sa.png"> العربية
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="fa">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ir.png"> فارسی
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="zh">
+    <img class="flag-icon" src="https://flagcdn.com/w20/cn.png"> 中文 (Chinese)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ja">
+    <img class="flag-icon" src="https://flagcdn.com/w20/jp.png"> 日本語 (Japanese)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ko">
+    <img class="flag-icon" src="https://flagcdn.com/w20/kr.png"> 한국어 (Korean)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="nl">
+    <img class="flag-icon" src="https://flagcdn.com/w20/nl.png"> Nederlands
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="sv">
+    <img class="flag-icon" src="https://flagcdn.com/w20/se.png"> Svenska
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="no">
+    <img class="flag-icon" src="https://flagcdn.com/w20/no.png"> Norsk
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="da">
+    <img class="flag-icon" src="https://flagcdn.com/w20/dk.png"> Dansk
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="fi">
+    <img class="flag-icon" src="https://flagcdn.com/w20/fi.png"> Suomi
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="pl">
+    <img class="flag-icon" src="https://flagcdn.com/w20/pl.png"> Polski
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="cs">
+    <img class="flag-icon" src="https://flagcdn.com/w20/cz.png"> Čeština
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="sk">
+    <img class="flag-icon" src="https://flagcdn.com/w20/sk.png"> Slovenčina
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="sl">
+    <img class="flag-icon" src="https://flagcdn.com/w20/si.png"> Slovenščina
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="hr">
+    <img class="flag-icon" src="https://flagcdn.com/w20/hr.png"> Hrvatski
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="sr">
+    <img class="flag-icon" src="https://flagcdn.com/w20/rs.png"> Српски
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="bs">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ba.png"> Bosanski
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="el">
+    <img class="flag-icon" src="https://flagcdn.com/w20/gr.png"> Ελληνικά
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="he">
+    <img class="flag-icon" src="https://flagcdn.com/w20/il.png"> עברית
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="hi">
+    <img class="flag-icon" src="https://flagcdn.com/w20/in.png"> हिन्दी
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="bn">
+    <img class="flag-icon" src="https://flagcdn.com/w20/bd.png"> বাংলা (Bengali)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ur">
+    <img class="flag-icon" src="https://flagcdn.com/w20/pk.png"> اردو (Urdu)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ta">
+    <img class="flag-icon" src="https://flagcdn.com/w20/in.png"> தமிழ் (Tamil)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="te">
+    <img class="flag-icon" src="https://flagcdn.com/w20/in.png"> తెలుగు (Telugu)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ml">
+    <img class="flag-icon" src="https://flagcdn.com/w20/in.png"> മലയാളം (Malayalam)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="th">
+    <img class="flag-icon" src="https://flagcdn.com/w20/th.png"> ไทย (Thai)
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="vi">
+    <img class="flag-icon" src="https://flagcdn.com/w20/vn.png"> Tiếng Việt
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="id">
+    <img class="flag-icon" src="https://flagcdn.com/w20/id.png"> Bahasa Indonesia
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ms">
+    <img class="flag-icon" src="https://flagcdn.com/w20/my.png"> Bahasa Melayu
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="ro">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ro.png"> Română
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="hu">
+    <img class="flag-icon" src="https://flagcdn.com/w20/hu.png"> Magyar
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="bg">
+    <img class="flag-icon" src="https://flagcdn.com/w20/bg.png"> Български
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="uk">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ua.png"> Українська
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="et">
+    <img class="flag-icon" src="https://flagcdn.com/w20/ee.png"> Eesti
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="lv">
+    <img class="flag-icon" src="https://flagcdn.com/w20/lv.png"> Latviešu
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="lt">
+    <img class="flag-icon" src="https://flagcdn.com/w20/lt.png"> Lietuvių
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="af">
+    <img class="flag-icon" src="https://flagcdn.com/w20/za.png"> Afrikaans
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="sw">
+    <img class="flag-icon" src="https://flagcdn.com/w20/tz.png"> Kiswahili
+  </a>
+
+  <a href="#" class="dropdown-item lang-opt" data-val="zu">
+    <img class="flag-icon" src="https://flagcdn.com/w20/za.png"> isiZulu
+  </a>
+
+</div>
+
 
             <a href="#" id="btn-change-password" class="dropdown-item">
               <i class="fas fa-key"></i>
