--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 @import url('./team-modal.css');
 @import url('./hero.css');
 @import url('./details-modal.css');
+@import url('./movie-details-page.css');
 @import url('./trailer-error.css');
 @import url('./trailer.modal.css');
 @import url('./mobile-nav.css');
